--- a/Source/Wifinian/Properties/Resources.resx
+++ b/Source/Wifinian/Properties/Resources.resx
@@ -125,6 +125,6 @@
     <value>..\Resources\language_ja.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="ProjectSite" xml:space="preserve">
-    <value>http://github.com/emoacht/WlanProfileViewer</value>
+    <value>http://github.com/emoacht/Wifinian</value>
   </data>
 </root>
