--- a/Source/Wifinian/Properties/Resources.resx
+++ b/Source/Wifinian/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="language_ja" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\language_ja.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="language_de" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\language_de.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="ProjectSite" xml:space="preserve">
     <value>http://github.com/emoacht/Wifinian</value>
   </data>
