--- a/Source/Wifinian/Properties/Resources.resx
+++ b/Source/Wifinian/Properties/Resources.resx
@@ -119,10 +119,10 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="language_en" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\language_en.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Resources\language.en.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="language_ja" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\language_ja.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="language_ja_JP" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\language.ja-JP.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="ProjectSite" xml:space="preserve">
     <value>http://github.com/emoacht/Wifinian</value>
